src/objects/ACED_MOT__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <inlineHelpText>This is a helptext for Affilliate</inlineHelpText>
        <label>Affiliate</label>
        <picklist>
            <controllingField>HUB__c</controllingField>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus &amp; Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macedonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montengro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Indication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Indication</label>
        <referenceTo>ACED_Brand_Indications__c</referenceTo>
        <relationshipLabel>MOTS</relationshipLabel>
        <relationshipName>MOTS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUB__c</fullName>
        <inlineHelpText>This is a helptext for HUB</inlineHelpText>
        <label>HUB</label>
        <picklist>
            <picklistValues>
                <fullName>ACE HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK HUB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MOT_Description__c</fullName>
        <label>MOT Description</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>My_MOT__c</fullName>
        <formula>IF(TEXT($User.ACED_HUB__c) = TEXT( HUB__c ),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My MOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MOT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Affiliate__c</columns>
        <columns>HUB__c</columns>
        <columns>MOT_Description__c</columns>
        <columns>Year__c</columns>
        <columns>Brand_Indication__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Australia_HUB</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Brand_Indication__c</columns>
        <columns>MOT_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
            <value>Australia HUB</value>
        </filters>
        <label>Australia HUB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canada_HUB</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Brand_Indication__c</columns>
        <columns>MOT_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
            <value>Canada HUB</value>
        </filters>
        <label>Canada HUB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>France_HUB</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Brand_Indication__c</columns>
        <columns>MOT_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
            <value>France HUB</value>
        </filters>
        <label>France HUB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Germany_HUB</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Brand_Indication__c</columns>
        <columns>MOT_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
            <value>Germany HUB</value>
        </filters>
        <label>Germany HUB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Italy_HUB</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Brand_Indication__c</columns>
        <columns>MOT_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
            <value>Italy HUB</value>
        </filters>
        <label>Italy HUB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_HUB_MOTs</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Brand_Indication__c</columns>
        <columns>MOT_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
        </filters>
        <label>My HUB MOTs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Spain_HUB</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Brand_Indication__c</columns>
        <columns>MOT_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
            <value>Spain HUB</value>
        </filters>
        <label>Spain HUB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UK_HUB</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Brand_Indication__c</columns>
        <columns>MOT_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
            <value>UK HUB</value>
        </filters>
        <label>UK HUB</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MOT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MOTS</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>UsersHubMatchingCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND((TEXT($User.ACED_HUB__c)&lt;&gt;&apos;ACE HUB&apos;),IF(TEXT(HUB__c)&lt;&gt; TEXT($User.ACED_HUB__c),TRUE,FALSE))</errorConditionFormula>
        <errorMessage>You cannot select Hub which you are not part of</errorMessage>
    </validationRules>
</CustomObject>